--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Projects"
+    url: https://alexgkendall.github.io/
+  - title: "Blog"
+    url: https://alexgkendall.github.io/
+  - title: "Software"
+    url: https://alexgkendall.github.io/
+  - title: "Talks"
+    url: https://alexgkendall.github.io/
+  - title: "Publications"
+    url: https://alexgkendall.github.io/
