--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ author:
   foursquare       :
   github           : "alexgkendall"
   google_plus      :
+  google_scholar   : "hE2mTp4AAAAJ"
   keybase          :
   instagram        :
   lastfm           :
