updated publications page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,4 +9,4 @@ main:
   - title: "Talks"
     url: https://alexgkendall.github.io/
   - title: "Publications"
-    url: https://alexgkendall.github.io/publications/
+    url: https://scholar.google.co.uk/citations?user=hE2mTp4AAAAJ
