--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
   - title: "Projects"
-    url: https://alexgkendall.github.io/
+    url: https://alexgkendall.com/
   - title: "Blog"
-    url: https://alexgkendall.github.io/
+    url: https://alexgkendall.com/
   - title: "Software"
-    url: https://alexgkendall.github.io/
+    url: https://alexgkendall.com/
   - title: "Talks"
-    url: https://alexgkendall.github.io/
+    url: https://alexgkendall.com/
   - title: "Publications"
     url: https://scholar.google.co.uk/citations?user=hE2mTp4AAAAJ
