--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : "Alex Kendall"
 description              : "Research Website and Blog."
 url                      : "https://alexgkendall.com/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "alexgkendall/alexgkendall.com" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "alexgkendall/alexgkendall.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
