--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Alex Kendall"
   avatar           : "/assets/images/alex.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Computer Vision & Robotics Research"
+  bio              : "Computer Vision & Robotics Researcher"
   location         : "University of Cambridge"
   email            : "agk34@cam.ac.uk"
   uri              :
