--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
   - title: "Research"
-    url: https://alexgkendall.github.io/research/
-#  - title: "Blog"
-#    url: https://alexgkendall.github.io/blog/
+    url: /research/
+  - title: "Blog"
+    url: /blog/
   - title: "Talks"
-    url: https://alexgkendall.github.io/talks/
+    url: /talks/
   - title: "Publications"
-    url: https://scholar.google.co.uk/citations?user=hE2mTp4AAAAJ
+    url: /publications/
   - title: "About"
-    url: https://alexgkendall.github.io/about/
+    url: /about/
