--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Home"
 title_separator          : "-"
 name                     : "Alex Kendall"
 description              : "Research Website and Blog."
-url                      : "https://alexgkendall.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "//alexgkendall.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "alexgkendall/alexgkendall.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
